# pyhton-small-games

./: README.md
the-game-of-the-life/: README.md  pyproject.toml
the-game-of-the-life/src/: main.py
the-game-of-the-life/src/game_objects/: __init__.py  cell.py  game_board.py  types.py
the-game-of-the-life/src/gui/: window.py
